<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white" >

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/image_placeholder"
                    android:contentDescription="@string/image" />

            <EditText
                    android:id="@+id/word"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:hint="@string/word"
                    android:singleLine="true" />

        </LinearLayout>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/sentence" />

        <EditText
                android:id="@+id/sentence"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textMultiLine" />

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/definition" />

        <EditText
                android:id="@+id/definition"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textMultiLine" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/new_tag"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/tag" />

            <Button
                    android:id="@+id/add_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_tag" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/container"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal"
                android:animateLayoutChanges="true"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />

    </LinearLayout>

</ScrollView>