<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/splash" >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="left"      
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="345dp"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:text="@string/choose_language" />

    <Spinner
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:prompt="@string/language"
            android:gravity="left"
            android:textSize="25sp"
            android:background="@drawable/splash_select" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:background="@drawable/splash_continue"
        android:text="@string/cont"
        android:visibility="gone" />

</LinearLayout>