<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/list_item_bg" >

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/image_placeholder_normal"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:layout_toRightOf="@id/image"
            android:textColor="@android:color/black"
            android:text="@string/word" />

        <TextView
            android:id="@+id/sentence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="italic"
            android:layout_toRightOf="@id/image"
            android:textColor="@android:color/black"
            android:layout_below="@id/word"
            android:text="@string/sentence" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="8dp" />

    <TextView
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:paddingLeft="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/similar" />

    <LinearLayout
            android:id="@+id/synonyms"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="?android:dividerHorizontal"
            android:animateLayoutChanges="false" />

</LinearLayout>