<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:showDividers="middle"
    android:divider="?android:dividerHorizontal"
    style="@style/Card">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle"
        android:divider="?android:dividerVertical"
        android:orientation="horizontal">

        <ca.taglab.vocabnomad.widgets.TypefacedTextView
            style="@style/Text.Medium"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="30sp"
            android:text="@string/definition" />

        <ImageView android:id="@+id/option_write"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:padding="4dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/write"
            android:background="@drawable/white_clickable"
            android:contentDescription="@string/writing"
            android:visibility="visible"/>

    </LinearLayout>

    <FrameLayout android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/white_clickable" >

            <ImageView android:id="@+id/listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/play"
                android:contentDescription="@string/listen" />

            <ca.taglab.vocabnomad.widgets.TypefacedTextView
                android:id="@+id/text"
                style="@style/Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textSize="20sp" />

        </LinearLayout>

        <EditText android:id="@+id/edit"
            style="@style/Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="20sp"
            android:hint="@string/write_something"/>

    </FrameLayout>

    <include layout="@layout/card_shaddow" />

</LinearLayout>