<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:showDividers="middle"
    android:divider="?android:dividerHorizontal"
    style="@style/Card">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle"
        android:divider="?android:dividerVertical"
        android:orientation="horizontal">

        <ca.taglab.vocabnomad.widgets.TypefacedTextView
            style="@style/Text.Medium"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="30sp"
            android:text="@string/tags" />

        <ImageView android:id="@+id/option_write"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:padding="4dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/write"
            android:contentDescription="@string/writing"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal" />

    <LinearLayout android:id="@+id/edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:divider="?android:dividerVertical">

            <EditText
                style="@style/Text"
                android:id="@+id/new_tag"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:padding="12dp"
                android:singleLine="true"
                android:textSize="20sp"
                android:hint="@string/tag" />

            <ImageView android:id="@+id/add_tag"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_gravity="center"
                android:src="@drawable/add_normal_black"
                android:background="@drawable/white_clickable"
                android:contentDescription="@string/add_tag"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:showDividers="beginning|middle"
            android:divider="?android:dividerHorizontal"
            android:animateLayoutChanges="false" />

    </LinearLayout>

    <include layout="@layout/card_shaddow" />

</LinearLayout>