<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000"
    tools:context="ca.taglab.vocabnomad.details.VocabLevelUp">

    <LinearLayout
        style="@style/Card"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:showDividers="middle"
        android:divider="?android:dividerHorizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:src="@drawable/star"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/level" />

            <ca.taglab.vocabnomad.widgets.TypefacedTextView
                android:id="@+id/level"
                style="@style/Text.Title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="4dp"
                android:src="@drawable/read"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/reading" />

            <ca.taglab.vocabnomad.widgets.TypefacedTextView
                android:id="@+id/read"
                style="@style/Text.Medium"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="4dp"
                android:src="@drawable/write"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/writing" />

            <ca.taglab.vocabnomad.widgets.TypefacedTextView
                android:id="@+id/write"
                style="@style/Text.Medium"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="4dp"
                android:src="@drawable/speak"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/speaking" />

            <ca.taglab.vocabnomad.widgets.TypefacedTextView
                android:id="@+id/speak"
                style="@style/Text.Medium"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="4dp"
                android:src="@drawable/listen"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/listening"/>

            <ca.taglab.vocabnomad.widgets.TypefacedTextView
                android:id="@+id/listen"
                style="@style/Text.Medium"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:divider="?android:dividerVertical">

            <ca.taglab.vocabnomad.widgets.TypefacedTextView
                android:id="@+id/ok_button"
                style="@style/Text.Title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/ok"
                android:background="@drawable/white_clickable" />

            <ca.taglab.vocabnomad.widgets.TypefacedTextView
                android:id="@+id/goal_button"
                style="@style/Text.Title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/goal"
                android:background="@drawable/white_clickable" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
